@@ -45,6 +45,7 @@ https://github.com/elastic/apm-agent-go/compare/v2.0.0...main[View commits]
 - Drop unsampled txs when connected to an APM Server >= 8.0 {pull}1208[#(1208)]
 - Removed SetTag {pull}1218[(#1218)]
 - Unexport Tracer's fields -- TracerOptions must be used instead {pull}1219[#(1219)]
+- Replace `authorization` with `*auth*` pattern for sanitizing field names {pull}1230[#(1230)]
 
 [[release-notes-1.x]]
 === Go Agent version 1.x
